--- a/tariff/src/main/resources/application.properties
+++ b/tariff/src/main/resources/application.properties
@@ -1,1 +1,36 @@
+# Application Configuration
 spring.application.name=tariff
+server.port=8080
+
+# Database Configuration
+spring.datasource.url=jdbc:h2:mem:tariffdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# JPA Configuration
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# External API Configuration
+wits.api.base-url=https://wits.worldbank.org/api/v1
+wits.api.timeout=30000
+
+# OpenAPI Documentation
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+
+# CORS Configuration
+management.endpoints.web.cors.allowed-origins=*
+management.endpoints.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+management.endpoints.web.cors.allowed-headers=*
+
+# Logging
+logging.level.com.verbosegarbonzo.tariff=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
