Add dependencies for validation, actuator, JPA, and H2; update application properties for actuator and serialization settings

--- a/tariff/src/main/resources/application.properties
+++ b/tariff/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+# Server Configuration
+server.port=8080
+
+# Application Information
 spring.application.name=tariff
+
+# Logging Configuration
+logging.level.com.verbosegarbonzo.tariff=INFO
+logging.level.org.springframework.web=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%level] %logger{36} - %msg%n
+
+# HTTP Client Configuration (for WITS API calls)
+spring.web.client.connect-timeout=5000
+spring.web.client.read-timeout=10000
+
+# Jackson JSON Configuration
+spring.jackson.default-property-inclusion=NON_NULL
+spring.jackson.serialization.write-dates-as-timestamps=false
+
+# Actuator Health Check
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
