Add WITS API config and properties

--- a/tariff/src/main/resources/application.properties
+++ b/tariff/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=tariff
+
+wits.base-url=https://wits.worldbank.org/API/V1
+wits.metadata.country=/wits/datasource/trn/country
+wits.metadata.product=/wits/datasource/trn/product
+wits.tariff.base-url=https://wits.worldbank.org/API/V1/SDMX/V21
+wits.tariff.dataset=/datasource/TRN
