Add JPA and PostgreSQL dependencies for Supabase integration

--- a/tariff/pom.xml
+++ b/tariff/pom.xml
@@ -77,6 +77,19 @@
 			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
 
+		<!-- Spring Data JPA for ORM (map Java entities to Supabase/PostgreSQL tables) -->
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<!-- PostgreSQL JDBC driver (required to connect Spring Boot JPA with Supabase/Postgres database) -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
