--- a/tariff/src/main/resources/application.properties
+++ b/tariff/src/main/resources/application.properties
@@ -4,5 +4,20 @@ wits.base-url=https://wits.worldbank.org/API/V1
 wits.metadata.country=/wits/datasource/trn/country
 wits.metadata.product=/wits/datasource/trn/product
 
+
 wits.tariff.base-url=https://wits.worldbank.org/API/V1/SDMX/V21
 wits.tariff.dataset=datasource/TRN
+
+spring.datasource.url=jdbc:postgresql://aws-1-ap-southeast-1.pooler.supabase.com:5432/postgres
+spring.datasource.username=postgres.ggozyvjrffoktsbkfdrg
+spring.datasource.password=1DWgmRhDuBYaAoiF
+# spring.datasource.hikari.data-source-properties.sslmode=require
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.batch_size=500
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.batch_versioned_data=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+
