--- a/tariff/src/main/resources/application.properties
+++ b/tariff/src/main/resources/application.properties
@@ -8,9 +8,9 @@ wits.metadata.product=/wits/datasource/trn/product
 wits.tariff.base-url=https://wits.worldbank.org/API/V1/SDMX/V21
 wits.tariff.dataset=datasource/TRN
 
-spring.datasource.url=jdbc:postgresql://aws-1-ap-southeast-1.pooler.supabase.com:5432/postgres
+spring.datasource.url=jdbc:postgresql://aws-1-ap-southeast-1.pooler.supabase.com:6543/postgres
 spring.datasource.username=postgres.ggozyvjrffoktsbkfdrg
-spring.datasource.password=1DWgmRhDuBYaAoiF
+spring.datasource.password=xnL3YmYIHQJu1dx2
 # spring.datasource.hikari.data-source-properties.sslmode=require
 
 spring.jpa.hibernate.ddl-auto=update
@@ -21,3 +21,7 @@ spring.jpa.properties.hibernate.batch_versioned_data=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
+spring.datasource.hikari.maximum-pool-size=2
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.idle-timeout=10000
+spring.datasource.hikari.max-lifetime=30000
