Improve product search to allow hs6 query and sorted results

--- a/tariff/src/main/resources/application.properties
+++ b/tariff/src/main/resources/application.properties
@@ -10,8 +10,7 @@ wits.tariff.dataset=datasource/TRN
 
 spring.datasource.url=jdbc:postgresql://aws-1-ap-southeast-1.pooler.supabase.com:6543/postgres
 spring.datasource.username=postgres.ggozyvjrffoktsbkfdrg
-spring.datasource.password=xnL3YmYIHQJu1dx2
-# spring.datasource.hikari.data-source-properties.sslmode=require
+spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.batch_size=500
