Update .gitignore to include compiled class files and build output folders

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -13,6 +13,14 @@
 # testing
 /coverage
 
+# Compiled class files
+*.class
+
+# Build output folders
+/target/
+/bin/
+/build/
+
 # next.js
 /.next/
 /out/
