--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
-    "recharts": "^3.2.1"
+    "@hookform/resolvers": "^5.2.2",
+    "date-fns": "^4.1.0",
+    "react-hook-form": "^7.63.0",
+    "recharts": "^3.2.1",
+    "sonner": "^2.0.7",
+    "zod": "^4.1.11"
   }
 }
