--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "chrono-node": "2.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
