Refactor tariff model and service: add Country and TariffRate entities, enhance TariffService with improved error handling and logging, and update .gitignore to exclude build artifacts.

--- a/tariff/.gitignore
+++ b/tariff/.gitignore
@@ -20,6 +20,14 @@
 # production
 /build
 
+# java class files
+*.class
+
+# maven build directories
+/target/
+/build/
+/out/
+
 # misc
 .DS_Store
 *.pem
