--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
+./application.properties
 .env*
 
 # vercel
@@ -43,3 +44,6 @@ next-env.d.ts
 # roo files
 .roo/
 .roomodes
+
+# java
+target/
