--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "@supabase/supabase-js": "^2.57.4",
     "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-table": "^8.21.3",
+    "bun": "^1.2.23",
     "chrono-node": "2.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
