Add AI recommendation feature and documentation
Introduces AI-powered tariff timing recommendations with backend services, models, controller, and frontend integration. Adds supporting documentation files, new TypeScript types, UI components, and updates repositories and configuration for AI workflow. Includes caching, personalized explanations, and comprehensive testing and deployment checklists.

--- a/tariff/pom.xml
+++ b/tariff/pom.xml
@@ -156,6 +156,24 @@
   			<version>4.0.0</version>
 		</dependency>
 
+		<!-- Tribuo ML Library for AI recommendations -->
+		<dependency>
+			<groupId>org.tribuo</groupId>
+			<artifactId>tribuo-regression-core</artifactId>
+			<version>4.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.tribuo</groupId>
+			<artifactId>tribuo-regression-tree</artifactId>
+			<version>4.3.2</version>
+		</dependency>
+
+		<!-- Spring Cache for AI result caching -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
