Improve Dockerfile healthcheck and user setup

--- a/tariff/Dockerfile
+++ b/tariff/Dockerfile
@@ -1,4 +1,4 @@
-# Stage 1: Build the application
+# Stage 1: Build the application (This part was perfect)
 FROM eclipse-temurin:21-jdk as builder
 
 WORKDIR /workspace
@@ -7,8 +7,6 @@ COPY mvnw pom.xml ./
 RUN ./mvnw dependency:go-offline
 COPY src ./src
 COPY models ./models
-
-# Build the JAR file
 RUN ./mvnw package -DskipTests
 
 # Stage 2: Create the final, minimal image
@@ -16,21 +14,32 @@ FROM eclipse-temurin:21-jre-jammy
 
 WORKDIR /app
 
+# --- FIX 1: Install curl ---
+# We must switch back to root to install packages
+USER root
+RUN apt-get update && \
+    apt-get install -y curl && \
+    # Clean up the apt cache to keep the image small
+    rm -rf /var/lib/apt/lists/*
+
 # Copy the built JAR from builder stage
 COPY --from=builder /workspace/target/*.jar app.jar
 
-# Create a non-root user for security
+# Create a non-root user (Good security)
 RUN useradd -m -u 1000 appuser && chown -R appuser:appuser /app
+# --- FIX 2: Switch back to appuser ---
 USER appuser
 
 # Expose the default Spring Boot port
 EXPOSE 8080
 
-# Health check to verify the application is running
-HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-  CMD java -jar app.jar --check-health || exit 1
+# --- FIX 3: Change the HEALTHCHECK ---
+# 1. Use curl to check the web endpoint (much faster)
+# 2. Increase start-period to 90s to give your ML service time to load
+HEALTHCHECK --interval=30s --timeout=10s --start-period=90s --retries=3 \
+  CMD curl -f http://localhost:8080/actuator/health || exit 1
 
-# Start the application with optimized JVM flags for containers
+# Start the application (Your entrypoint was good)
 ENTRYPOINT ["java", \
   "-XX:+UseG1GC", \
   "-XX:MaxRAMPercentage=75.0", \
